# icp_ticket_dapp

./: Cargo.toml  LICENSE copy  README copy.md  README.md  RUN_PROJECT.md  dfx.json  fix_imports.sh  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/icp_ticket_dapp_backend/: constructor.old.did  icp_ticket_dapp_backend.wasm  index.js  service.did.d.ts
.dfx/local/canisters/icp_ticket_dapp_frontend/: index.js
src/declarations/icp_ticket_dapp_backend/: icp_ticket_dapp_backend.did.js  index.d.ts  index.js
src/declarations/icp_ticket_dapp_frontend/: index.d.ts  index.js
src/icp_ticket_dapp_backend/: Cargo.toml
src/icp_ticket_dapp_backend/src/: lib.rs
src/icp_ticket_dapp_frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/icp_ticket_dapp_frontend/src/: App.tsx  index.css  main.tsx
src/icp_ticket_dapp_frontend/src/components/: Footer.tsx  Navbar.tsx
src/icp_ticket_dapp_frontend/src/pages/: CreateEventPage.tsx  EventDetailsPage.tsx  EventsPage.tsx  HomePage.tsx  MyTicketsPage.tsx  NotFoundPage.tsx  ScanTicketPage.tsx  TicketDetailsPage.tsx
src/icp_ticket_dapp_frontend/src/types/: index.ts
