[package]
name = "icp_ticket_dapp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.0"
ciborium = "0.2.1"
ic-ledger-types = "0.9.0"
sha2 = "0.10.6"
ic-certified-map = "0.4.0"
